# nomount-vfs

./: .gitignore  HANDOFF_DEBUG_SESSION.md  LICENSE  NOMOUNT_SUSFS_REFACTOR_PLAN.md  README.md  build-zygisk.sh  kernel-runtime-logging-toggle.md  module-runtime-logging-toggle.md  root-detection-research.md
.github/workflows/: build.yml
module/: config.sh  customize.sh  logcat.sh  logging.sh  metamount.sh  module.prop  monitor.sh  nm-arm  nm-arm64  post-fs-data.sh  service.sh  susfs_integration.sh  sync.sh  uninstall.sh
module/webroot/assets/: index-C7Q2acn4.js  index-CriBm-tq.css  index-Die8yNkZ.js
patches/: fix-null-isb.patch  inject-base-hide-stuff.sh  inject-maps-hooks.sh  inject-namei-hooks.sh  inject-overlayfs-hooks.sh  inject-procfd-hooks.sh  inject-procmounts-hooks.sh  inject-readdir-hooks.sh  inject-stat-hooks.sh  inject-statfs-hooks.sh  inject-xattr-hooks.sh  nomount-complete-memory-safety.patch  nomount-concurrency-barriers.patch  nomount-core-5.10.patch  nomount-kernel-5.10.patch  nomount-kernel-5.15-6.6.patch  nomount-kernel-5.4.patch  nomount-logic-api-fix.patch  nomount-performance-hotpath-fix.patch
patches/experimental/: nomount-kernel-4.19.patch
src/: build.sh  nm-arm64  nm-arm64-fixed  nm-arm64.s  nm.c  sstrip
tasks/: todo.md
webroot/: index.html
webui/: index.js
zygisk-src/: CMakeLists.txt  logging.h  main.cpp
